--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -11,14 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
+
+        <ImageView
+            android:id="@+id/splashImageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#F1F1F1"
-            app:lottie_autoPlay="true"
-            app:lottie_fileName="loading.json"
-            app:lottie_loop="true" />
+            android:layout_height="625dp"
+            android:src="@drawable/splash_cirep_dark" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
