--- a/app/src/main/res/layout/fragment_result_ok.xml
+++ b/app/src/main/res/layout/fragment_result_ok.xml
@@ -18,7 +18,20 @@
         app:layout_constraintVertical_bias="0.39"
         app:lottie_autoPlay="true"
         app:lottie_fileName="result_ok.json"
-        app:lottie_loop="true" />
+        app:lottie_loop="false" />
+
+    <TextView
+        android:id="@+id/successTextView"
+        android:layout_width="293dp"
+        android:layout_height="83dp"
+        android:gravity="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/resultOKbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultOKAnimation" />
+
 
     <Button
         android:id="@+id/resultOKbutton"
