--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_background">#F1F1F1</color>
     <color name="color_nav_header">#EDE79B</color>
+    <color name="transparent">#00000000</color>
 </resources>
