--- a/app/src/main/res/layout/fragment_incidencias.xml
+++ b/app/src/main/res/layout/fragment_incidencias.xml
@@ -5,39 +5,32 @@
     android:layout_height="match_parent"
     tools:context="com.example.dashboard.ui.mis_incidencias.MisIncidenciasFragment">
 
-
     <ScrollView
-        android:id="@+id/scroll_incidencias"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.877">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:id="@+id/incidencias_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="150dp"
             android:orientation="vertical" />
     </ScrollView>
 
+
     <TextView
         android:id="@+id/title_mis_incidencias_fragment"
-        android:layout_width="238dp"
-        android:layout_height="70dp"
-        android:layout_weight="5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/menu_mis_incidencias"
         android:textSize="27sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/scroll_incidencias"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/incidencias_container"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.051" />
+        app:layout_constraintVertical_bias="0.057"
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
