--- a/app/src/main/res/drawable/rounded_square.xml
+++ b/app/src/main/res/drawable/rounded_square.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp"/>
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="#FFFF"/>
     <stroke android:width="4dp"
-        android:color="@android:color/holo_orange_light"/>
+        android:color="#0A4EC6"/>
 </shape>
