--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:backgroundTint="@color/bottom_login"
+    android:translationZ="-2dp"
     tools:context="com.example.login.ui.login.LoginActivity">
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="333dp"
+        android:layout_height="47dp"
         android:layout_marginTop="44dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
@@ -26,8 +28,8 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="329dp"
+        android:layout_height="46dp"
         android:layout_marginTop="48dp"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
@@ -85,9 +87,33 @@
         android:layout_height="275dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/splash_cirep_light"
-        tools:layout_editor_absoluteY="-4dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/splash_cirep_light" />
 
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="379dp"
+        android:layout_height="674dp"
+        android:background="@drawable/rounded_square"
+        android:translationZ="-2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.387"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="357dp"
+        android:layout_height="234dp"
+        android:layout_marginTop="320dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:translationZ="-2dp"
+
+        app:srcCompat="@drawable/city_background" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
