--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="2dp" android:color="#7FA6E1" />
-    <corners android:radius="20dp" />
-    <solid android:color="#D8EBEC" />
+    <stroke android:width="3dp" android:color="#0C6FD3" />
+    <corners android:radius="10dp" />
+    <solid android:color="#FBFBFB" />
 </shape>
