--- a/app/src/main/res/layout/item_incidencia.xml
+++ b/app/src/main/res/layout/item_incidencia.xml
@@ -6,24 +6,29 @@
     android:background="@drawable/rounded_background"
     android:padding="16dp">
 
-    <com.example.dashboard.ui.mis_incidencias.IncidenciaComponents.IncidenciaImage
-        android:id="@+id/incidencia_imagen"
-        android:layout_width="111dp"
-        android:layout_height="78dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="1dp"
-        android:background="@drawable/rounded_background" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_background">
 
-    <TextView
-        android:id="@+id/incidencia_titulo"
-        android:layout_width="298dp"
-        android:layout_height="54dp"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/incidencia_imagen"
-        android:text=""
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/incidencia_titulo"
+            android:layout_width="236dp"
+            android:layout_height="70dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="15dp"
+            android:text=""
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <com.example.dashboard.ui.mis_incidencias.IncidenciaComponents.IncidenciaImage
+            android:id="@+id/incidencia_imagen"
+            android:layout_width="144dp"
+            android:layout_height="72dp"
+            android:background="@drawable/rounded_background"
+            android:scaleType="fitXY" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
