--- a/app/src/main/res/layout/item_incidencia.xml
+++ b/app/src/main/res/layout/item_incidencia.xml
@@ -18,16 +18,16 @@
 
             <TextView
                 android:id="@+id/incidencia_titulo"
-                android:layout_width="236dp"
-                android:layout_height="70dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="15dp"
+                android:layout_width="200dp"
+                android:layout_height=""
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/incidencia_imagen"
                 android:text=""
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <com.example.dashboard.ui.mis_incidencias.IncidenciaComponents.IncidenciaImage
+            <ImageView
                 android:id="@+id/incidencia_imagen"
                 android:layout_width="144dp"
                 android:layout_height="72dp"
