--- a/app/src/main/res/layout/item_incidencia.xml
+++ b/app/src/main/res/layout/item_incidencia.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:id="@+id/incidencia_titulo"
                 android:layout_width="200dp"
-                android:layout_height=""
+                android:layout_height="72dp"
                 android:layout_marginStart="3dp"
                 android:layout_toEndOf="@+id/incidencia_imagen"
                 android:text=""
