--- a/app/src/main/res/layout/fragment_step_location.xml
+++ b/app/src/main/res/layout/fragment_step_location.xml
@@ -6,6 +6,19 @@
     tools:context="com.example.register.steps.StepLocationFragment">
 
 
+    <Button
+        android:id="@+id/atras_stepLocation"
+        android:layout_width="27dp"
+        android:layout_height="26dp"
+        android:background="#00000000"
+        android:foreground="@drawable/atras_boton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.045" />
+
     <FrameLayout
         android:id="@+id/autocomplete_container"
         android:layout_width="378dp"
