--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/nav_mapa"
-        android:name="com.example.dashboard.ui.mapa.fragment.TabMapFragment"
+        android:name="com.example.dashboard.ui.mapa.fragment.MapaFragment"
         android:label="@string/menu_mapa"
         tools:layout="@layout/fragment_tab_map" >
         <action
             android:id="@+id/action_nav_mapa_to_nav_slideshow"
-            app:destination="@id/nav_slideshow" />
+            app:destination="@id/nav_mis_incidencias" />
         <action
             android:id="@+id/action_nav_mapa_to_nav_perfil"
             app:destination="@id/nav_perfil" />
@@ -28,13 +28,23 @@
             app:destination="@id/nav_mapa" />
         <action
             android:id="@+id/action_nav_perfil_to_nav_slideshow"
-            app:destination="@id/nav_slideshow" />
+            app:destination="@id/nav_mis_incidencias" />
     </fragment>
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_mis_incidencias"
         android:name="com.example.dashboard.ui.mis_incidencias.MisIncidenciasFragment"
         android:label="@string/menu_mis_incidencias"
+        tools:layout="@layout/fragment_incidencias" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_mapa"
+            app:destination="@id/nav_mapa" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/all_incidencias"
+        android:name="com.example.dashboard.ui.AllIncidencias.AllIncidenciasFragment"
+        android:label="@string/menu_all_incidencias"
         tools:layout="@layout/fragment_incidencias" >
         <action
             android:id="@+id/action_nav_slideshow_to_nav_mapa"
