get all reports and get user reports work

--- a/app/src/main/res/layout/fragment_all_incidencias.xml
+++ b/app/src/main/res/layout/fragment_all_incidencias.xml
@@ -1,14 +1,36 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dashboard.ui.AllIncidencias.AllIncidenciasFragment">
+    tools:context="com.example.dashboard.ui.mis_incidencias.MisIncidenciasFragment">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/incidencias_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:orientation="vertical" />
+    </ScrollView>
 
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/title_mis_incidencias_fragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ayuntamiento" />
-</FrameLayout>
+        android:gravity="center"
+        android:text="@string/menu_all_incidencias"
+        android:textSize="27sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/incidencias_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057"
+        tools:layout_editor_absoluteX="16dp" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
