--- a/app/src/main/res/layout/incidencia_prueba.xml
+++ b/app/src/main/res/layout/incidencia_prueba.xml
@@ -52,7 +52,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/descriptionTextView"
+                android:id="@+id/incidencia_descripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Descripción"
