--- a/app/src/main/res/layout/item_incidencia.xml
+++ b/app/src/main/res/layout/item_incidencia.xml
@@ -6,36 +6,61 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_background"
+        android:layout_height="120dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="1dp"
+        android:background="@drawable/incidencia_prueba"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:outlineProvider="background"
         android:padding="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_background">
+        <LinearLayout
+            android:id="@+id/linear_imagen_incidencia"
+            android:layout_width="100dp"
 
-            <TextView
-                android:id="@+id/incidencia_titulo"
-                android:layout_width="200dp"
-                android:layout_height="72dp"
-                android:layout_marginStart="3dp"
-                android:layout_toEndOf="@+id/incidencia_imagen"
-                android:text=""
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/incidencia_imagen"
-                android:layout_width="144dp"
-                android:layout_height="72dp"
-                android:background="@drawable/rounded_background"
-                android:scaleType="fitXY" />
-        </RelativeLayout>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/sioque"
+                android:clipToOutline="true"
+                android:scaleType="fitCenter" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/textLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/linear_imagen_incidencia"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/incidencia_titulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Título"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/incidencia_descripcion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Descripción"
+                android:textColor="#ffffff"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
-
-
 </RelativeLayout>
