detalles de la incidencia se ven al clicar en una incidencia de mis incidencias y de lista general + desacreditar incidencia endpoint finiquitado + getTiposDeReportes endpoint finiquitado pero falta implementarlo + getEstados endpoint hecho falta implementar

--- a/app/src/main/res/layout/item_incidencia.xml
+++ b/app/src/main/res/layout/item_incidencia.xml
@@ -17,6 +17,14 @@
         android:outlineProvider="background"
         android:padding="16dp">
 
+        <Button
+            android:id="@+id/botondetalle"
+            android:layout_width="341dp"
+            android:layout_height="118dp"
+            android:background="#00FFFFFF"
+            android:enabled="true"
+            android:visibility="visible" />
+
         <LinearLayout
             android:id="@+id/linear_imagen_incidencia"
             android:layout_width="100dp"
