--- a/app/src/main/res/layout/activity_reportar_incidencia.xml
+++ b/app/src/main/res/layout/activity_reportar_incidencia.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.dashboard.ReportarIncidencia">
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="399dp"
-        android:layout_height="74dp"
+        android:layout_width="358dp"
+        android:layout_height="76dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="8dp"
@@ -54,20 +55,20 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="410dp"
-        android:layout_height="448dp"
+        android:layout_width="356dp"
+        android:layout_height="372dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine"
-        android:layout_width="409dp"
-        android:layout_height="104dp"
+        android:hint="@string/descripcion"
+        android:layout_width="346dp"
+        android:layout_height="73dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="7dp"
         android:ems="10"
