--- a/app/src/main/res/layout/fragment_all_incidencias.xml
+++ b/app/src/main/res/layout/fragment_all_incidencias.xml
@@ -6,11 +6,13 @@
     tools:context="com.example.dashboard.ui.mis_incidencias.MisIncidenciasFragment">
 
     <ScrollView
+        android:backgroundTint="@color/color_background_incidencias"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
+            android:backgroundTint="@color/color_background_incidencias"
             android:id="@+id/incidencias_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,19 +20,6 @@
             android:orientation="vertical" />
     </ScrollView>
 
-
-    <TextView
-        android:id="@+id/title_mis_incidencias_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/menu_all_incidencias"
-        android:textSize="27sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/incidencias_container"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.057"
-        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
