--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="color_background_perfil">#93BFCF</color>
+    <color name="color_background_incidencias">#EEE9DA</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_background">#F1F1F1</color>
     <color name="color_nav_header">#EDE79B</color>
