--- a/app/src/main/res/layout/activity_detalle_incidencia.xml
+++ b/app/src/main/res/layout/activity_detalle_incidencia.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/white"
+    android:background="#EEE9DA"
     android:padding="16dp">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="374dp"
+        android:layout_height="630dp"
+        android:layout_marginTop="12sp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -36,6 +35,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -44,7 +44,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Tipo de reporte"
-                        android:textColor="@android:color/black"
+                        android:textColor="#000000"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -80,6 +80,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -124,6 +125,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -167,6 +169,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -210,6 +213,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -252,6 +256,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -311,6 +316,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#93BFCF"
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="16dp">
@@ -345,9 +351,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:background="#6096B4"
+        android:backgroundTint="#6096B4"
+        android:drawableTint="#6096B4"
+        android:foregroundTint="#6096B4"
         android:text="Desacreditar Incidencia"
         android:textColor="#FFFFFF"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:iconTint="#6096B4" />
 </RelativeLayout>
