--- a/app/src/main/res/drawable/incidencia_prueba.xml
+++ b/app/src/main/res/drawable/incidencia_prueba.xml
@@ -2,15 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:startColor="#FFA500"
-        android:endColor="#986B4C"
-        android:angle="0"/>
+    <solid android:color="#6096B4" />
 
 
     <stroke
-        android:width="5dp"
-        android:color="@color/black" />
+        android:width="3dp"
+        android:color="#93BFCF" />
 
     <corners
         android:radius="24dp" />
