--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/bottom_login"
+    android:background="#93BFCF"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
