--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:backgroundTint="@color/bottom_login"
+    android:backgroundTint="#EEE9DA"
     android:translationZ="-2dp"
     tools:context="com.example.login.ui.login.LoginActivity">
 
